--- a/iis/webapps/iis/css/formatting.css
+++ b/iis/webapps/iis/css/formatting.css
@@ -35,22 +35,26 @@
 		float: left;
 		margin: 0px;		
 		padding: 0px 10px 10px 10px;
+		clear:both;
 		}
 	#left_panel {		
 		width: 210px;
 		height: 100%;
 		float: left;
 		padding: 0 15px 0 25px;
+		clear:both;
 		}		
 	#right_panel {		
 		width: 100%;
 		height: 100%;
-		float: left;
+		float: right;
 		margin: 0 0 0 0px;
 		padding: 5px 0 0 0px;
+		clear:both;
 		}
 	#header_background {
 		width: 100%;
+		clear:both;
 	}
 		
 	#footer {
@@ -61,6 +65,7 @@
 		font-size:90%;
 		margin: 0px;
 		padding: 0px;		
+		clear:both;
 		}
 
 /* Sections */
